# Seraaj_underdevelopment

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEMO_ACCOUNTS.md  LICENSE  MUSTREAD.txt  Makefile  README.md  README_KINGDOM_MAP.md  REPO_MAP.md  SERVER_STATUS_REPORT.md  START_BOTH_SERVERS.md  START_SERVERS.bat  TECHNICAL_ASSESSMENT_REPORT.md  cypress.config.ts  demo.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  seraaj_dev.db-shm  seraaj_dev.db-wal  setup-database.py  start-dev-servers.bat  start-dev-servers.sh  start-dev.bat  start-dev.sh  start-seraaj.bat  start-servers.py  start-servers.sh  start_seraaj.py  test_auth.py  turbo.json
.claude/: settings.local.json
ImplementationReports/: admin_activate_user_POST.C.json  admin_clear_sample_data_DELETE.I.json  admin_clear_sample_data_DELETE.md  admin_database_health_GET.C.json  admin_database_health_GET.md  admin_delete_user_DELETE.I.json  admin_delete_user_DELETE.md  admin_get_all_users_GET.I.json  admin_get_all_users_GET.md  admin_get_moderation_reports_GET.I.json  admin_get_moderation_reports_GET.md  admin_get_opportunity_statistics_GET.I.json  admin_get_opportunity_statistics_GET.md  admin_get_performance_metrics_GET.I.json  admin_get_performance_metrics_GET.md  operations_cancel_operation_POST.I.json  operations_cancel_operation_POST.md  operations_delete_operation_DELETE.C.json  operations_delete_operation_DELETE.md  operations_get_my_operations_GET.C.json  operations_get_my_operations_GET.md  operations_get_operation_logs_GET.I.json  operations_get_operation_logs_GET.md  operations_get_operation_status_GET.I.json  operations_get_operation_status_GET.md  operations_get_operations_statistics_GET.I.json  operations_get_operations_statistics_GET.md  operations_stream_operation_progress_GET.I.json  operations_stream_operation_progress_GET.md  opportunities_create_opportunity_POST.I.json  opportunities_create_opportunity_POST.md  opportunities_delete_opportunity_DELETE.I.json  opportunities_delete_opportunity_DELETE.md  verification_upload_verification_document_POST.I.json  verification_upload_verification_document_POST.md  websocket_add_participant_POST.I.json  websocket_add_participant_POST.md  websocket_create_conversation_POST.I.json  (+13 more)
(+227 files in other folders)
